tests/file_test/testdata/number_with_leading_zero.llang
# `042` is not supported

let x = 042;
